--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"name": "easy_study",
 	"version": "0.1.0",
 	"private": true,
+	"engine": {
+		"node": "18.3"
+	},
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.2.0",
