feat(engines): typo

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "easy_study",
 	"version": "0.1.0",
 	"private": true,
-	"engine": {
+	"engines": {
 		"node": "18.3.0",
 		"npm": "8.5.5"
 	},
