--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
 		"node": "18.3.0",
 		"npm": "8.5.5"
 	},
+	"proxy": "http://localhost:3030",
+	"homepage": ".",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.2.0",
